# rust-webcam-model-bench

./: .gitattributes  Cargo.toml  README.md  config.toml  package-lock.json
models/: pose.onnx  yolo11s_320.onnx  yolov8n-pose.onnx
src/: app.rs  camera.rs  config.rs  cv.rs  lib.rs  main.rs  ui.rs  utils.rs
src/app/: helpers.rs  subscriptions.rs
src/camera/: cam_service.rs  cam_sub.rs  cam_worker.rs  service.rs  subscription.rs
src/cv/: cv_inference.rs  cv_service.rs  cv_sub.rs  cv_worker.rs  tasks.rs
src/cv/tasks/: object.rs  pose.rs  pose_task.rs
src/cv/tasks/pose/: constants.rs
