[package]
name = "rust-webcam-model-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = [
    "image",
    "canvas",
    "tokio",     # Enables time::every and async subscriptions
    "advanced",
] }
rscam = "0.5.5"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
yuv = "0.8.9"
