[package]
name = "rust-webcam-model-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = [
    "image",
    "canvas",
    "tokio",     # Enables time::every and async subscriptions
    "advanced",
] }
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
ndarray = "0.17.2"
image = "0.25.9"
ort = "2.0.0-rc.11"
raqote = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] } 
toml = "1.0.2"
ccap = { package = "ccap-rs", version = "1.5.1" }
